--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.Binus"
         tools:targetApi="31">
         <activity
+            android:name=".quiz"
+            android:exported="false" />
+        <activity
+            android:name=".libraryimgclick"
+            android:exported="false" />
+        <activity
+            android:name=".library"
+            android:exported="false" />
+        <activity
             android:name=".homepage"
             android:exported="false" />
         <activity
